# mdk-e2e-test

./: Cargo.toml  docker-compose.yml
dev/: strfry.conf
src/: lib.rs
tests/: mdk_group_flow.rs
