[package]
name = "mdk-e2e-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cgka-engine = { path = "../mdk/crates/cgka-engine" }
cgka-traits = { path = "../mdk/crates/traits" }
storage-sqlite = { path = "../mdk/crates/storage-sqlite" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
nostr-sdk = { version = "0.44", features = ["nip59"] }
base64 = "0.22"
hex = "0.4"
async-trait = "0.1"
k256 = { version = "0.13", default-features = false, features = ["schnorr"] }
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wn-kv-test = { path = "../wn-kv-test" }
keyvault = { path = "../keyvault-rs" }
openmls = { path = "../openmls/openmls", default-features = false }
openmls_rust_crypto = { path = "../openmls/openmls_rust_crypto" }
tls_codec = { version = "0.4", features = ["derive"] }
